# ncnn_yolov8_seg

./: CMakeLists.txt
models/: best_sim-sim-opt.param
src/: main.cpp  yolov8_seg.cpp  yolov8_seg.h
